--- a/day-7/resources/styles.css
+++ b/day-7/resources/styles.css
@@ -20,7 +20,7 @@ html{
 .container {
     display: flex;
     align-items: center;
-    justify-content: ;
+    justify-content: center;
     flex-direction: column;
     height: 100vh;
     width: 100vw;
