conclusion-search-delete-tasks

--- a/mini-project-js/index.css
+++ b/mini-project-js/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    background-color: burlywood;
+    background-color: #f49050;
     padding: 16px 120px;
 }
 
@@ -25,7 +25,6 @@ header input {
     border-radius: 8px;
     font-size: 18px;
 }
-
 #tasks {
     padding: 60px 120px;
 }
@@ -39,7 +38,7 @@ header input {
 
 #tasks h2 button {
     height: 46px;
-    background-color: rgb(255, 145, 0);
+    background-color: #f49050;
     color: white;
     font-size: 12px;
     font-weight: bold;
@@ -52,7 +51,7 @@ header input {
 }
 
 #tasks h2 button:hover {
-    background-color: rgb(209, 174, 127);
+    background-color: #fcc996;
 }
 
 #tasks h6 {
@@ -74,8 +73,11 @@ header input {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 10px 15px #00000015;
+    display: initial;
 }
-
+#tasks ul li.hidden {
+    display: none;
+}
 #tasks ul li h5 {
     font-size: 16px;
     margin-bottom: 16px;
@@ -89,7 +91,7 @@ header input {
 }
 
 #tasks ul li .actions box-icon:hover {
-    fill: rgb(209, 174, 127);
+    fill: #fcc996;
 }
 
 #overlay {
@@ -145,7 +147,7 @@ header input {
 }
 
 .modal form h3 box-icon:hover {
-    fill: rgba(233, 27, 27, 0.623);
+    fill: #ed1c22;
 }
 
 .modal form label {
@@ -171,7 +173,7 @@ header input {
 .modal form input:focus,
 .modal form textarea:focus,
 .modal form button:focus {
-    border-color: rgba(233, 27, 27, 0.623);
+    border-color: #ed1c22;
 }
 
 .modal form textarea {
@@ -182,7 +184,7 @@ header input {
 .modal form button {
     width: 100%;
     height: 46px;
-    background-color: rgb(250, 145, 7);
+    background-color: #f49050;
     color: white;
     font-size: 12px;
     font-weight: bold;
@@ -195,5 +197,5 @@ header input {
 }
 
 .modal form button:hover {
-    background-color: rgb(204, 160, 101);
+    background-color: #fcc996;
 }
